# auto-dev-

./: # Architecture Auto-SRE Environment.txt  # MVP Tech.txt  # System Design Auto-SRE.txt  .coverage  .gitignore  1 product requirement.md  10 development phases.md  11 environment and devops.md  12 testing strategy.md  2 user stories and acceptance criteria.md  3 information architecture.md  4 system architecture.md  5 database schema.md  6 api contracts.md  7 monorepo structure.md  8 scoring engine spec.md  9 engineering scope definition.md  Dockerfile  PRD Auto-SRE (Junior DevOps) OpenEnv.txt  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train_grpo.py
auto-sre/: .coverage  .env.example  Dockerfile  README.md  all_output.txt  all_output_utf8.txt  app.py  crash_log.txt  debug_test.py  docker-compose.yml  fix_docs.py  fix_temp.py  git_push.py  hardcoded_agent_results.txt  hardcoded_agent_results_utf8.txt  inference.py  null_agent_results.txt  null_agent_results_utf8.txt  openenv.yaml  openenv_compliance_checklist.md  pyproject.toml  pyrightconfig.json  run_wrapper.py  test_results.txt  test_results_utf8.txt
auto-sre/app/: __init__.py  logger.py  main.py  ui.py
auto-sre/engine/: filesystem.py  process_manager.py  sandbox.py  security.py
auto-sre/grader/: __init__.py  base.py  health_check.py
auto-sre/scripts/: colab_training_guide.md  multi_agent.py  run_baseline_agent.py  run_hardcoded_agent.py  run_null_agent.py  sim_check.py  test_grader_endpoints.py  train_grpo.py  validate_openenv.sh
auto-sre/tasks/: registry.py  (+10 more)
server/: app.py
(+15 files in other folders)
