[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-sre"
version = "0.1.0"
description = "OpenEnv-compliant environment for evaluating AI SRE agents on Linux infrastructure repair tasks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.23.0",
    "gradio>=4.0.0",
    "httpx>=0.24",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app.main:main"

[tool.setuptools]
package-dir = {"" = "auto-sre"}

[tool.setuptools.packages.find]
where = ["auto-sre"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "ruff>=0.1",
    "mypy>=1.5",
    "pytest-cov>=4.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
